@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7086
+#define luatex_svn_revision 7087
